--- a/index.html
+++ b/index.html
@@ -3,3 +3,22 @@ layout: home
 title: My website
 subtitle: This is where I will tell my friends way too much about me
 ---
+
+#### [Topic Modeling via BERTopic and LDA](https://github.com/jhewitt11/Topic-Modeling-BERTopic-and-LDA)
+
+A tool for comparing topic models. Uses BERTopic and Latent Dirichlet Allocation.
+
+- BERTopic
+- scikit-learn Pipelines
+- Sentence-Transformers
+- Topic Coherence / NPMI Score
+- Matplotlib
+
+#### [Headline Classification](https://github.com/jhewitt11/HeadlineClassification)
+
+Training and Evaluating different classifier models
+
+- Logistic Regression
+- Random Forest
+- Neural Classifier
+- BERT Classifier
