--- a/index.html
+++ b/index.html
@@ -18,9 +18,18 @@ subtitle: Take a look around.
     </script>
   </head>
   <body classes="About Info Resume Portfolio">
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2><br>
-    <p><strong>Paragraph</strong>: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent est mi, commodo vitae mauris at, sagittis vehicula sem. Quisque malesuada dui at justo maximus, vel placerat nibh blandit. Phasellus quis ipsum aliquam, fringilla ante sit amet, sagittis magna. In at dignissim eros, id vulputate tellus. Quisque orci urna, pretium in porttitor et, rhoncus in nulla. Aenean viverra ante in velit tincidunt, sit amet tincidunt ante suscipit. In malesuada consectetur molestie.</p>
+	<div>Etiam maximus, ante vitae porttitor tincidunt, sem erat pharetra turpis, a ornare tortor purus <a href="https://www.google.com">ut justo</a>.
+    </div>
+    <h1>Portfolio</h1>
+    <h2>Project 1</h2>
+	<p><strong>Paragraph</strong>: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent est mi, commodo vitae mauris at, sagittis vehicula sem. Quisque malesuada dui at justo maximus, vel placerat nibh blandit. Phasellus quis ipsum aliquam, fringilla ante sit amet, sagittis magna. In at dignissim eros, id vulputate tellus. Quisque orci urna, pretium in porttitor et, rhoncus in nulla. Aenean viverra ante in velit tincidunt, sit amet tincidunt ante suscipit. In malesuada consectetur molestie.</p>
+	<ul>
+      <li>Suspendisse convallis ac metus non efficitur.</li>
+      <li>Donec consectetur eu nisi luctus bibendum.</li>
+      <li>Nam tempor facilisis sem vitae mattis.</li>
+      <li>Fusce feugiat rhoncus eros, id auctor mauris facilisis quis.</li>
+    </ul>
+
     <br>
     <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
     <br>
@@ -39,3 +48,4 @@ subtitle: Take a look around.
     <button type="button">Sample button</button>
   </body>
 </html>
+
