--- a/index.html
+++ b/index.html
@@ -16,19 +16,24 @@ subtitle: Take a look around.
         console.log('jQuery: Page loading complete!');
       });
     </script>
-  </head>
-  <body classes="About Info Resume Portfolio">
-	<div>Etiam maximus, ante vitae porttitor tincidunt, sem erat pharetra turpis, a ornare tortor purus <a href="https://www.google.com">ut justo</a>.
-    </div>
-    <h1>Portfolio</h1>
-    <h2>Project 1</h2>
-	<p><strong>Paragraph</strong>: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent est mi, commodo vitae mauris at, sagittis vehicula sem. Quisque malesuada dui at justo maximus, vel placerat nibh blandit. Phasellus quis ipsum aliquam, fringilla ante sit amet, sagittis magna. In at dignissim eros, id vulputate tellus. Quisque orci urna, pretium in porttitor et, rhoncus in nulla. Aenean viverra ante in velit tincidunt, sit amet tincidunt ante suscipit. In malesuada consectetur molestie.</p>
-	<ul>
-      <li>Suspendisse convallis ac metus non efficitur.</li>
-      <li>Donec consectetur eu nisi luctus bibendum.</li>
-      <li>Nam tempor facilisis sem vitae mattis.</li>
-      <li>Fusce feugiat rhoncus eros, id auctor mauris facilisis quis.</li>
-    </ul>
+</head>
+<body classes="About Info Resume Portfolio">
+<div>Etiam maximus, ante vitae porttitor tincidunt, sem erat pharetra turpis, a ornare tortor purus <a href="https://www.google.com">ut justo</a>.
+</div>
+<h1>Portfolio</h1>
+	
+<h2>Topic Modeling via BERTopic and LDA</h2>
+<p>A tool for comparing topic models. Uses BERTopic and Latent Dirichlet Allocation.</p>
+<ul>
+	<li>BERTopic</li>
+	<li>scikit-learn Pipelines</li>
+	<li>Sentence-Transformers</li>
+	<li>Topic Coherence / NPMI Score</li>
+ 	<li>Matplotlib</li>
+</ul>
+<button onclick='https://github.com/jhewitt11/Topic-Modeling-BERTopic-and-LDA'>
+Github Repo
+</button>
 
     <br>
     <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
