--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ subtitle: Take a look around.
 	<li>Topic Coherence / NPMI Score</li>
  	<li>Matplotlib</li>
 </ul>
-<button onclick='https://github.com/jhewitt11/Topic-Modeling-BERTopic-and-LDA'>
+<button name='button' onclick='https://github.com/jhewitt11/Topic-Modeling-BERTopic-and-LDA'>
 Github Repo
 </button>
 
