--- a/index.html
+++ b/index.html
@@ -16,37 +16,105 @@ subtitle: Take a look around.
         console.log('jQuery: Page loading complete!');
       });
     </script>
-</head>
-<body classes="About Info Resume Portfolio">
-<div>Etiam maximus, ante vitae porttitor tincidunt, sem erat pharetra turpis, a ornare tortor purus <a href="https://www.google.com">ut justo</a>.
-</div>
-<h1>Portfolio</h1>
+  </head>
+  <body classes="About Info Resume Portfolio">
+	<div>Short about me tiam maximus, ante vitae porttitor tincidunt, sem erat pharetra turpis, a ornare tortor purus <a href="https://www.google.com">ut justo</a>.
+    </div>
+    <h1>Portfolio</h1>
 	
-<h2>Topic Modeling via BERTopic and LDA</h2>
-<p>A tool for comparing topic models. Uses BERTopic and Latent Dirichlet Allocation.</p>
-<ul>
-	<li>BERTopic</li>
-	<li>scikit-learn Pipelines</li>
-	<li>Sentence-Transformers</li>
-	<li>Topic Coherence / NPMI Score</li>
- 	<li>Matplotlib</li>
-</ul>
-<button name='button' onclick='https://github.com/jhewitt11/Topic-Modeling-BERTopic-and-LDA'>
-Github Repo
-</button>
-
+	
+    <h2>Topic Modeling via BERTopic and LDA</h2>
+	<p>A tool for comparing topic models. Uses BERTopic and Latent Dirichlet Allocation.</p>
+	<ul>
+      <li>BERTopic</li>
+      <li>scikit-learn Pipelines</li>
+      <li>Sentence-Transformers</li>
+      <li>Topic Coherence / NPMI Score</li>
+	  <li>Matplotlib</li>
+    </ul>
+	<button name='button' onclick='https://github.com/jhewitt11/Topic-Modeling-BERTopic-and-LDA'>
+	Github Repo
+	</button>
     <br>
-    <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
+	
+	
+	<h2>News Classification</h2>
+	<p>Training and evaluating different classifier models.</p>
+	<ul>
+      <li>Logistic Regression</li>
+      <li>Random Forest</li>
+      <li>Neural Classifier</li>
+      <li>BERT Classifier</li>
+    </ul>
+	<button name='button' onclick='https://github.com/jhewitt11/HeadlineClassification'>
+	Github Repo
+	</button>
+    <br>
+
+
+	<h2>Information Extraction</h2>
+	<p>Extracting information from text in the form of Subject, Verb, Object triples.</p>
+	<ul>
+      <li>SpaCy</li>
+	  <li>Coreferee</li>
+	  <li>Textacy</li>
+    </ul>
+	<button name='button' onclick='https://github.com/jhewitt11/SVO_extraction'>
+	Github Repo
+	</button>
+    <br>
+
+
+	<h2>News Clustering Study</h2>
+	<p>Scraping news articles, vectorizing their contents and comparing their similarity.</p>
+	<ul>
+      <li>BeautifulSoup</li>
+	  <li>TF-IDF</li>
+	  <li>PCA</li>
+	  <li>Matplotlib</li>
+    </ul>
+	<button name='button' onclick='https://github.com/jhewitt11/NewsClusteringStudy'>
+	Github Repo
+	</button>
+    <br>
+
+
+	<h2>Document Database</h2>
+	<p> Input documents, tokenize and encode them via Sentence-Transformers then insert into Milvus DB.</p>
+	<ul>
+		<li>NLTK Tokenizer</li>
+		<li>Sentence-Transformers</li>
+		<li>Milvus DB</li>
+		<li>Docker</li>
+	</ul>
+	
+	
+	<h2>Algorithms</h2>
+	<p> Implementations of classic algorithms from Coursera's course.</p>
+	<ul>
+		<li>Sorting, search and randomized algorithms<li>
+		<li>Graph search and shortest paths<li>
+		<li>Data Structures</li>
+		<li>Time complexity analysis</li>
+	</ul>
+	
+	
+	<h2>Web Summarizer</h2>
+	<p>Simple web app sandbox</p>
+	<ul>
+		<li>Flask</li>
+		<li>Jinja</li>
+		<li>Newspaper</li>
+	</ul>
+	
+	
     <br>
     <hr>
     <br>
-    <ul>
-      <li>Suspendisse convallis ac metus non efficitur.</li>
-      <li>Donec consectetur eu nisi luctus bibendum.</li>
-      <li>Nam tempor facilisis sem vitae mattis.</li>
-      <li>Fusce feugiat rhoncus eros, id auctor mauris facilisis quis.</li>
-    </ul>
-    <br>
+    <button type="button">Sample button</button>
+  </body>
+</html>
+
     <div>Etiam maximus, ante vitae porttitor tincidunt, sem erat pharetra turpis, a ornare tortor purus <a href="https://www.google.com">ut justo</a>.
     </div>
     <br>
