--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@ subtitle: Take a look around.
   <body classes="About Info Resume Portfolio">
 	<div>Short about me tiam maximus, ante vitae porttitor tincidunt, sem erat pharetra turpis, a ornare tortor purus <a href="https://www.google.com">ut justo</a>.
     </div>
-	  
-<div align = 'center'>
     <h1>Portfolio</h1>
-</div>
+	
 	
     <h2>Topic Modeling via BERTopic and LDA</h2>
 	<p>A tool for comparing topic models. Uses BERTopic and Latent Dirichlet Allocation.</p>
@@ -37,7 +35,7 @@ subtitle: Take a look around.
 	<button name='button' onclick='https://github.com/jhewitt11/Topic-Modeling-BERTopic-and-LDA'>
 	Github Repo
 	</button>
-    <br>
+    <hr>
 	
 	
 	<h2>News Classification</h2>
@@ -51,7 +49,7 @@ subtitle: Take a look around.
 	<button name='button' onclick='https://github.com/jhewitt11/HeadlineClassification'>
 	Github Repo
 	</button>
-    <br>
+    <hr>
 
 
 	<h2>Information Extraction</h2>
@@ -64,7 +62,7 @@ subtitle: Take a look around.
 	<button name='button' onclick='https://github.com/jhewitt11/SVO_extraction'>
 	Github Repo
 	</button>
-    <br>
+    <hr>
 
 
 	<h2>News Clustering Study</h2>
@@ -78,7 +76,7 @@ subtitle: Take a look around.
 	<button name='button' onclick='https://github.com/jhewitt11/NewsClusteringStudy'>
 	Github Repo
 	</button>
-    <br>
+    <hr>
 
 
 	<h2>Document Database</h2>
@@ -89,17 +87,17 @@ subtitle: Take a look around.
 		<li>Milvus DB</li>
 		<li>Docker</li>
 	</ul>
-	
+	<hr>
 	
 	<h2>Algorithms</h2>
 	<p> Implementations of classic algorithms from Coursera's course.</p>
 	<ul>
-		<li>Sorting, search and randomized algorithms<li>
-		<li>Graph search and shortest paths<li>
+		<li>Sorting, search and randomized algorithms</li>
+		<li>Graph search and shortest paths</li>
 		<li>Data Structures</li>
 		<li>Time complexity analysis</li>
 	</ul>
-	
+	<hr>
 	
 	<h2>Web Summarizer</h2>
 	<p>Simple web app sandbox</p>
@@ -108,19 +106,8 @@ subtitle: Take a look around.
 		<li>Jinja</li>
 		<li>Newspaper</li>
 	</ul>
-	
-	
-    <br>
-    <hr>
-    <br>
-    <button type="button">Sample button</button>
+	<hr>
   </body>
 </html>
 
-    <div>Etiam maximus, ante vitae porttitor tincidunt, sem erat pharetra turpis, a ornare tortor purus <a href="https://www.google.com">ut justo</a>.
-    </div>
-    <br>
-    <button type="button">Sample button</button>
-  </body>
-</html>
 
