--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@ subtitle: Take a look around.
   <body classes="About Info Resume Portfolio">
 	<div>Short about me tiam maximus, ante vitae porttitor tincidunt, sem erat pharetra turpis, a ornare tortor purus <a href="https://www.google.com">ut justo</a>.
     </div>
-    <h1>Portfolio</h1>
 	
+	<div> align='center'
+    <h1>Portfolio</h1>
+	<div>
 	
     <h2>Topic Modeling via BERTopic and LDA</h2>
 	<p>A tool for comparing topic models. Uses BERTopic and Latent Dirichlet Allocation.</p>
@@ -32,7 +34,7 @@ subtitle: Take a look around.
       <li>Topic Coherence / NPMI Score</li>
 	  <li>Matplotlib</li>
     </ul>
-	<button name='button' onclick='https://github.com/jhewitt11/Topic-Modeling-BERTopic-and-LDA'>
+	<button name='button' onclick='https://github.com'>
 	Github Repo
 	</button>
     <hr>
