--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ subtitle: Take a look around.
 	
 	<div> align='center'
     <h1>Portfolio</h1>
-	<div>
+	</div>
 	
     <h2>Topic Modeling via BERTopic and LDA</h2>
 	<p>A tool for comparing topic models. Uses BERTopic and Latent Dirichlet Allocation.</p>
