--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@ subtitle: Take a look around.
       <li>Topic Coherence / NPMI Score</li>
 	  <li>Matplotlib</li>
     </ul>
-	<button name='button' onclick='https://github.com'>
-	Github Repo
-	</button>
+	
+<a href "https://github.com/">Github Repo</a>
+	
+	<button name="button" onclick="http://www.google.com">Click me</button>
     <hr>
 	
 	
