--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
-title: Hi...I'm Joe!
-subtitle: Take a look around.
+title: Joe Hewitt
+subtitle: Portfolio Site
 ---
 <!DOCTYPE html>
 <html>
