--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@ subtitle: Portfolio Site
     </script>
   </head>
   <body classes="About Info Resume Portfolio">
-	<div>Short about me tiam maximus, ante vitae porttitor tincidunt, sem erat pharetra turpis, a ornare tortor purus <a href="https://www.google.com">ut justo</a>.
-    </div>
+	<p> Machine Vision sales engineer turned NLP enthusiast. I've spent the last year learning data science and natural language processing.
 	
-	<div> align='center'
+	<div> align='center'>
     <h1>Portfolio</h1>
 	</div>
 	
