--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@ subtitle: Portfolio Site
     </script>
   </head>
   <body classes="About Info Resume Portfolio">
-	<p> Machine Vision sales engineer turned NLP enthusiast. I've spent the last year learning data science and natural language processing.
-	
-	<div> align='center'>
-    <h1>Portfolio</h1>
-	</div>
+	<p> Machine Vision sales engineer turned ML enthusiast. I've spent the last year or so learning data science and natural language processing.</p>
 	
     <h2>Topic Modeling via BERTopic and LDA</h2>
 	<p>A tool for comparing topic models. Uses BERTopic and Latent Dirichlet Allocation.</p>
