--- a/index.html
+++ b/index.html
@@ -29,11 +29,8 @@ subtitle: Portfolio Site
       <li>Topic Coherence / NPMI Score</li>
 	  <li>Matplotlib</li>
     </ul>
+	<a href "https://github.com/jhewitt11/Topic-Modeling-BERTopic-and-LDA">Github Repo</a>
 	
-<a href "https://github.com/">Github Repo</a>
-	
-	<button name="button" onclick="http://www.google.com">Click me</button>
-    <hr>
 	
 	
 	<h2>News Classification</h2>
@@ -107,5 +104,3 @@ subtitle: Portfolio Site
 	<hr>
   </body>
 </html>
-
-
