--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ subtitle: Portfolio Site
       <li>Topic Coherence / NPMI Score</li>
 	  <li>Matplotlib</li>
     </ul>
-	<a href "https://github.com/jhewitt11/Topic-Modeling-BERTopic-and-LDA">Github Repo</a>
+	<a href "https://google.com">Github Repo</a>
 	
 	
 	
