--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@ subtitle: Portfolio Site
       <li>Topic Coherence / NPMI Score</li>
 	  <li>Matplotlib</li>
     </ul>
-	<a href "https://google.com">Github Repo</a>
+	  </html>	  
+
+## Hello this is a markdown test
 	
-	
-	
+<html>
 	<h2>News Classification</h2>
 	<p>Training and evaluating different classifier models.</p>
 	<ul>
