--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ subtitle: Portfolio Site
       <li>Topic Coherence / NPMI Score</li>
 	  <li>Matplotlib</li>
     </ul>
-<a href="https://www.google.com/">Google Link</a>
+<a href="https://github.com/jhewitt11/Topic-Modeling-BERTopic-and-LDA/">Google Link</a>
 	
 
 	<h2>News Classification</h2>
