--- a/resume.html
+++ b/resume.html
@@ -6,5 +6,5 @@ title : Resume
 <div id="pdf" style="height: 800px;"></div>
 <script src="/js/pdfobject.min.js"></script>
 <script>
-PDFObject.embed("https://jhewitt11.github.io/jh_resume_gh.pdf", "#pdf");
+PDFObject.embed("https://jhewitt11.github.io/joeHewitt_resume_GH.pdf", "#pdf");
 </script>
