--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@ title: Joe Hewitt
 subtitle: Portfolio Site
 ---
 
-<p> Machine Vision sales engineer turned ML enthusiast. I've spent the last year or so learning data science and natural language processing.</p>
+<p> Machine Vision sales engineer turned NLP/ML enthusiast. I've spent the last year or so learning data science and natural language processing. In addition to working on the projects below, Both Coursera's NLP specialization and Deep Learning and Neural Networks course were great resources for introducing different model architectures and machine learning concepts. </p>
+
+<p>I welcome introductions and conversations about work / related projects / collaboration. My info can be found on the Contact page. Thanks!</p>
 <hr>
 	
     <h2>Topic Modeling via BERTopic and LDA</h2>
