--- a/index.html
+++ b/index.html
@@ -9,52 +9,73 @@ subtitle: Portfolio Site
 <p>I welcome introductions and conversations about work / related projects / collaboration. My info can be found on the Contact page. Thanks!</p>
 <hr>
 	
-    <h2>Topic Modeling via BERTopic and LDA</h2>
+   	<h2>Topic Modeling via BERTopic and LDA</h2>
 	<p>A tool for comparing topic models. Uses BERTopic and Latent Dirichlet Allocation.</p>
 	<ul>
-      <li>BERTopic</li>
-      <li>scikit-learn Pipelines</li>
-      <li>Sentence-Transformers</li>
-      <li>Topic Coherence / NPMI Score</li>
-	  <li>Matplotlib</li>
-    </ul>
+		<li>BERTopic</li>
+		<li>scikit-learn Pipelines</li>
+		<li>Sentence-Transformers</li>
+		<li>Topic Coherence / NPMI Score</li>
+		<li>Matplotlib</li>
+	</ul>
 	<a href="https://github.com/jhewitt11/Topic-Modeling-BERTopic-and-LDA/">Github Repo</a>
 	<hr>
 	
+	<h2>Document Analysis Platform</h2>
+	<p>Web app for gathering and analyzing text data / news stories.</p>
+	<ul>
+		<li>Flask</li>
+		<li>Jinja</li>
+		<li>Newspaper3k</li>
+		<li>Google Custom Search API</li>
+	</ul>
+	<a href="https://github.com/jhewitt11/document-analysis-platform">Github Repo</a>
+	<hr>
+
+	<h2>Algorithms</h2>
+	<p> Implementations of classic algorithms from Coursera's course.</p>
+	<ul>
+		<li>Sorting, search and randomized algorithms</li>
+		<li>Graph search and shortest paths</li>
+		<li>Data Structures</li>
+		<li>Time complexity analysis</li>
+	</ul>
+	<a href="https://github.com/jhewitt11/Algorithms">Github Repo</a>
+	<hr>
 
 	<h2>News Classification</h2>
 	<p>Training and evaluating different classifier models.</p>
 	<ul>
-      <li>Logistic Regression</li>
-      <li>Random Forest</li>
-      <li>Neural Classifier</li>
-      <li>BERT Classifier</li>
-    </ul>
+		<li>Logistic Regression</li>
+		<li>Random Forest</li>
+		<li>Neural Classifier</li>
+		<li>BERT Classifier</li>
+	</ul>
 	<a href="https://github.com/jhewitt11/HeadlineClassification">Github Repo</a>
-    <hr>
+	<hr>
 
 
 	<h2>Information Extraction</h2>
 	<p>Extracting information from text in the form of Subject, Verb, Object triples.</p>
 	<ul>
-      <li>SpaCy</li>
-	  <li>Coreferee</li>
-	  <li>Textacy</li>
-    </ul>
+		<li>SpaCy</li>
+		<li>Coreferee</li>
+		<li>Textacy</li>
+	</ul>
 	<a href="https://github.com/jhewitt11/SVO_extraction/">Github Repo</a>
-    <hr>
+	<hr>
 
 
 	<h2>News Clustering Study</h2>
 	<p>Scraping news articles, vectorizing their contents and comparing their similarity.</p>
 	<ul>
-      <li>BeautifulSoup</li>
-	  <li>TF-IDF</li>
-	  <li>PCA</li>
-	  <li>Matplotlib</li>
-    </ul>
+		<li>BeautifulSoup</li>
+		<li>TF-IDF</li>
+		<li>PCA</li>
+		<li>Matplotlib</li>
+	</ul>
 	<a href="https://github.com/jhewitt11/NewsClusteringStudy">Github Repo</a>
-    <hr>
+	<hr>
 
 
 	<h2>Document Database</h2>
@@ -66,25 +87,4 @@ subtitle: Portfolio Site
 		<li>Docker</li>
 	</ul>
 	<a href="https://github.com/jhewitt11/DocumentDatabase">Github Repo</a>
-	<hr>
-	
-	<h2>Algorithms</h2>
-	<p> Implementations of classic algorithms from Coursera's course.</p>
-	<ul>
-		<li>Sorting, search and randomized algorithms</li>
-		<li>Graph search and shortest paths</li>
-		<li>Data Structures</li>
-		<li>Time complexity analysis</li>
-	</ul>
-	<a href="https://github.com/jhewitt11/Algorithms">Github Repo</a>
-	<hr>
-	
-	<h2>Web Summarizer</h2>
-	<p>Simple web app sandbox</p>
-	<ul>
-		<li>Flask</li>
-		<li>Jinja</li>
-		<li>Newspaper</li>
-	</ul>
-	<a href="https://github.com/jhewitt11/webSummarizer">Github Repo</a>
 	<hr>
