--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ subtitle: Portfolio Site
 	<hr>
 
 	<h2>Algorithms</h2>
-	<p> Implementations of classic algorithms from Coursera's course.</p>
+	<p> Implementations of classic algorithms from a Stanford's Coursera <a href="https://www.coursera.org/specializations/algorithms">course</a>.</p>
 	<ul>
 		<li>Sorting, search and randomized algorithms</li>
 		<li>Graph search and shortest paths</li>
