--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@ subtitle: Portfolio Site
 	<ul>
 		<li>Flask</li>
 		<li>Jinja</li>
-		<li>Newspaper3k</li>
-		<li>Google Custom Search API</li>
+		<li>Seek and Store - use Google Search API and store, clean and store query results.</li>
+		<li>NER - Visualize named entity frequency between articles with Chart.js </li>
+		<li>Summarize - Enter URL and see summarized article contents.</li>
 	</ul>
 	<a href="https://github.com/jhewitt11/document-analysis-platform">Github Repo</a>
 	<hr>
