--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ subtitle: Portfolio Site
 	<ul>
 		<li>Flask</li>
 		<li>Jinja</li>
-		<br>
+		<li>SQLite</li>
 		<li>Seek and Store - use Google Search API and store, clean and store query results.</li>
 		<li>NER - Visualize named entity frequency between articles with Chart.js </li>
 		<li>Summarize - Enter URL and see summarized article contents.</li>
@@ -35,7 +35,7 @@ subtitle: Portfolio Site
 	<hr>
 
 	<h2>Algorithms</h2>
-	<p> Implementations of classic algorithms from a Stanford's Coursera <a href="https://www.coursera.org/specializations/algorithms">course</a>.</p>
+	<p> Implementations of classic algorithms from Stanford's Coursera <a href="https://www.coursera.org/specializations/algorithms">course</a>.</p>
 	<ul>
 		<li>Sorting, search and randomized algorithms</li>
 		<li>Graph search and shortest paths</li>
