--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@ subtitle: Portfolio Site
 		<li>Flask</li>
 		<li>Jinja</li>
 		<li>SQLite</li>
-		<li>Seek and Store - use Google Search API and store, clean and store query results.</li>
+	</ul>
+	<p>Functionality</p>
+	<ul>
+		<li>Seek and Store - using Google Search API, extract query results then clean and store them.</li>
 		<li>NER - Visualize named entity frequency between articles with Chart.js </li>
 		<li>Summarize - Enter URL and see summarized article contents.</li>
 	</ul>
