--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ subtitle: Portfolio Site
 <hr>
 	
    	<h2>Topic Modeling via BERTopic and LDA</h2>
-	<p>A tool for comparing topic models. Uses BERTopic and Latent Dirichlet Allocation.</p>
+	<p>A tool for quantifying topic model performance. Compares BERTopic and Latent Dirichlet Allocation.</p>
 	<ul>
 		<li>BERTopic</li>
 		<li>scikit-learn Pipelines</li>
